fixing the background on mobile

--- a/src/styles/setup/_base.scss
+++ b/src/styles/setup/_base.scss
@@ -17,6 +17,10 @@ body {
     sans-serif;
   color: #ddd5cb;
   background: radial-gradient(#212224 0%, #181111 99.48%);
+
+  @media screen and (max-width: 640px) {
+    background: #181111;
+  }
 }
 
 // TO DO : BACKGROUND NOT APPEARING, TEST IT OUT IN THE LAYOUT
@@ -26,7 +30,7 @@ body::before {
   width: 100%;
   // height: 100vh;
   z-index: -1;
-  background: radial-gradient(#212224 0%, #181111 99.48%);
+  // background: radial-gradient(#212224 0%, #181111 99.48%);
 }
 
 img {
